--- a/面试笔记.md
+++ b/面试笔记.md
@@ -1,3 +1,35 @@
+1. 深层嵌套对象,如何更新状态?
+
+```tsx
+const [state, setState ] = useState({
+  a: {
+    b: "2"
+  }
+})
+// 切进去改变嵌套值
+const updateState = () => {
+  setState(prevState => ({
+    a: {
+      b: "1"
+    }
+  })
+}
+
+
+```
+
+2. 你有一个父组件，它将 props 传递给子组件。每当父组件重新渲染时，子组件也会重新渲染，即使它的 props 没有改变。挑战在于优化组件结构，以便当父组件的状态更新但子组件的 props 保持不变时，子组件不会不必要地重新渲染。
+```tsx
+使用高阶组件memo:
+为了防止在计数状态改变但数据保持不变时 ChildComponent 重新渲染，你可以使用 React.memo 来记忆 ChildComponent。
+
+使用高阶hooks useCallback :
+要阻止 ChildComponent 每次 ParentComponent 重新渲染时重新渲染，请使用 useCallback 来记忆 handleClick 函数。
+```
+
+
+
+
 ```jsx
 1.ReatcJS是什么以及它是如何工作的？
 ReactJS 是一个功能强大的 JavaScript 库，用于使用构建块创建交互式用户界面。
